# Graphics-Assignment4

./: CMakeLists.txt  README.md  f_shader.glsl  graphics_2021.vcxproj  graphics_2021.vcxproj.filters  hit.cpp  hit.h  main.cpp  mode.h  objloader.cpp  objloader.hpp  shader.h  v_shader.glsl  view.h
Debug/: graphics_2021.exe.recipe  vc142.idb
Debug/graphics_2021.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  graphics_2021.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
objects/: bullet.h  enemy.h  item.h  object.h  player.h
